RedSquare: Use service.plaatsoft.nl as score server